--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,25 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html>
+<head>
+  <title>Smoothiet</title>
+</head>
+<body>
+  <h1>Smoothielista</h1>
+  <ul>
+    <li th:each="smoothie: ${smoothiet}">
+      <a th:href="@{~/smoothiet/{id}(id=${smoothie.id})}">
+        <span th:text="${smoothie.nimi}">Smoothie</span>
+      </a>
+    </li>
+  </ul>
 
-    <head>
-        <title>Otsikko</title>
-        <meta charset="utf-8" />
-    </head>
-
-    <body>
-        <h1>Heippa vaan!</h1>
-
-        <p>Ja .. <span th:text="${viesti}">jotain?</span></p>
-
-        <p><a href="/opiskelijat">Tästä opiskelijalistaukseen.</a></p>
-    </body>
-</html>
+  <h2>Toiminnot</h2>
+  <ul>
+    <li>
+      <a href="smoothiet/">Luo uusi smoothie</a>
+    </li>
+    <li>
+      <a href="ainekset/">Tarkastele ja lisää aineksia</a>
+    </li>
+  </ul>
+  </body>
+  </html>
